fix(style): form visibility icon

--- a/src/components/Input/Form.css
+++ b/src/components/Input/Form.css
@@ -17,4 +17,5 @@
 	position: absolute;
 	top: 3.45rem;
 	right: 1rem;
+	user-select: none;
 }
